--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <span></span>
                 <span></span>
             </div>
+            <nav>
             <ul class="navbar__menu">
                 <li class="navbar__item">
                    <a href="" class="navbar__links">Gifts <i class="bx bx-gift"></i></a>
@@ -66,7 +67,7 @@
 </section>
 <section class="popular-categories">
     <h2>Shop our most popular categories</h2>
-    <div class="categories-container">
+    <div class="categories">
         <div class="category-item">
             <img src="assets/jewelry.jpg" alt="Jewelry">
             <p>Jewelry</p>
@@ -87,7 +88,7 @@
 </section>
 <section class="birthday-gifts">
     <h2>Discover birthday gifts as special as they are</h2>
-    <div class="gift-container">
+    <div class="gifts">
         <div class="gift-item">
             <img src="assets/gift1.jpg" alt="Personalized Necklaces">
             <p>Personalized Necklaces</p>
@@ -124,7 +125,7 @@
         <p class="deal-timer">⏳ Fresh deals in <span id="deal-timer">00:00:00</span></p>
     </div>
 
-    <div class="deals-container">
+    <div class="deals">
         <div class="deal-item">
             <img src="assets/deal1.jpg" alt="Deal 1">
             <div class="deal-pricing">
